# admin_validator

./: .gitignore  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: lint.yml  run-python.yml  run_validator.yml  test.yml
src/: config.py  models.py  report_manager.py  runner.py  sheets_client.py  utils.py  validator.py
src/validators/: __init__.py  base.py  leads.py  sales.py  trainings.py
tests/: __init__.py  test_models.py  test_utils.py
